--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 
 
 #sidebar ul li 
-{    color: rgba(230,230,230,0.9);
+{    color: #FFFFFF;
 	list-style: none;
 	padding: 15px 10px;
 	border-bottom: 1px solid rgba(100,100,100,0.3);
